--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -1,4 +1,4 @@
-<div class="music-search">
+<div ng-controller="MusicSearchCtrl" class="music-search">
 	<div class="search-bar">
 		<form ng-submit="search(query)">
 			<label>Search for Songs</label>
@@ -6,7 +6,7 @@
 		</form>
 	</div>
 	<div class="search-results">
-		<div class="search-result" ng-repeat="for song in songs">
+		<div class="search-result" ng-repeat="song in songs track by song.id">
 			<span class="song-title">{{song.title}}</span> -- {{song.artist}}
 		</div>
 	</div>
