--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -1,9 +1,12 @@
 <div ng-controller="MusicSearchCtrl" class="music-search">
 	<div class="playlist">
+		<h3>Playlist:</h3>
+		<div class="empty-playlist" ng-if="playlist.length < 1">Start adding songs now!</div>
 		<div ng-repeat="song in playlist track by song.id">
 			<span class="song-title">{{song.title}}</span> -- {{song.artist}}
 			<button class="remove-button" ng-click="remove(song)">-</button>
 		</div>
+		<button class="send-button" ng-if="playlist.length > 0" ng-click="savePlaylist(playlist)">Send it!</button>
 	</div>
 	<div class="search-bar">
 		<form ng-submit="search(query)">
