--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -16,7 +16,9 @@
 	</div>
 	<div class="search-results">
 		<div class="search-result" ng-repeat="song in songs|notInList:playlist track by song.id">
-			<iframe ng-src="{{song.trustedUrl}}" width="250" height="80" frameborder="0" allowtransparency="true"></iframe>
+			<span class="song-title">{{song.title}}</span> -- {{song.artist}}
+			<button ng-click="add(song)" class="add-button">+</button>
+			<play-button id="{{song.id}}"></play-button>
 		</div>
 	</div>
 </div>
