--- a/app/templates/upload-picture.html
+++ b/app/templates/upload-picture.html
@@ -1,3 +1,3 @@
-<canvas id="preview-canvas" />
+<canvas id="preview-canvas" ></canvas>
 <input type="file" id="file_input" accept="image/*" />
 <button class="upload-btn" ng-click="uploadPicture()">Upload</button>
