--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -2,7 +2,7 @@
 	<div class="playlist">
 		<h3>Playlist:</h3>
 		<div class="empty-playlist" ng-if="playlist.length < 1">Start adding songs now!</div>
-		<div ng-repeat="song in playlist track by song.id"
+		<div ng-repeat="song in playlist track by song.id">
 			<button class="remove-button" ng-click="remove(song)">-</button>
 			<play-button id="{{song.id}}"></play-button>
 			<span class="song-title">{{song.title}}</span>- {{song.artist}}
