--- a/app/templates/playButton.html
+++ b/app/templates/playButton.html
@@ -1,1 +1,1 @@
-<button ng-click="playAudio()">{{actionText}}</button>
+<button ng-click="playAudio()" class="btn btn-link btn-xs"><span class="glyphicon glyphicon-{{actionText}}"></span></button>
