move search to an index route

--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -1,4 +1,4 @@
-<div ng-controller="MusicSearchCtrl" class="music-search">
+<div class="music-search">
 	<div class="playlist">
 		<h3>Playlist:</h3>
 		<div class="empty-playlist" ng-if="playlist.length < 1">Start adding songs now!</div>
