--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -124,3 +124,15 @@ body {
     font-size: .8em;
     font-weight:normal;
 }
+
+.cover-art button {
+    position: relative;
+    left: 30px;
+}
+
+.cover-art img {
+    height: 55px;
+    width: 55px;
+    position: relative;
+    right: 30px;
+}
