start the customize path & fix errors

--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -1,1 +1,15 @@
 <h1>Customize it, Baby!</h1>
+<div>
+	<div class="templates-list">
+		<ul>
+			<li>Default</li>
+			<li>Another</li>
+			<li>Another...</li>
+		</ul>
+	</div>
+	<div class="default-template">
+		<div class="default-template-step-1">
+			
+		</div>
+	</div>
+</div>
