--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -125,9 +125,13 @@ body {
     font-weight:normal;
 }
 
-.cover-art button {
+.cover-art .play-button {
     position: relative;
-    left: 30px;
+    left: 15px;
+}
+
+.cover-art .play-button button {
+    z-index:10;
 }
 
 .cover-art img {
