--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -8,8 +8,14 @@
 		</ul>
 	</div>
 	<div class="default-template">
+
 		<div class="default-template-step-1">
-			
+			<span class="step-title">Step 1.</span> Choose a background image 
+			<button class="btn step-btn" ng-click="choosePhoto()">GO!</button>
+		</div>
+		<div class="default-template-step-2">
+			<span class="step-title" ng-click="chooseAlbumTitle()">Step 2.</span> Choose a title 
+			<button class="btn step-btn">GO!</button>
 		</div>
 	</div>
 </div>
