--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -7,32 +7,33 @@
 					<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
 					<input class="form-control input-sm" ng-model="query" ng-model-options="{ debounce: 250 }">
 				</div>
-				<button class="send-button btn btn-primary btn-sm pull-right" ng-if="playlist.length > 0" ng-click="savePlaylist(playlist)"><span class="glyphicon glyphicon-pencil"></span></button>
+				<button class="send-button btn btn-primary btn-sm pull-right" ng-if="playlist.length > 0" ng-click="savePlaylist(playlist)"><span class="glyphicon glyphicon-envelope"></span></button>
 			</form>
 		</div>
 		<div class="empty-playlist" ng-if="playlist.length < 1">Start adding songs now!</div>
-		<ul class="list-group">
-			<li class="list-group-item" ng-repeat="song in playlist track by song.id">
+		<ul class="list-group search-results">
+			<li class="list-group-item" ng-repeat="song in songs|notInList:playlist track by song.id">
 				<div class="cover-art pull-left">
 					<play-button id="{{song.id}}"></play-button>
 					<img src="{{song.imageUrl}}" alt="..." class="img-rounded">
 				</div>
 				<span class="song-title">{{song.title}} <br> <small>{{song.artist}}</small></span>
-				<div class="pull-right right-button">
-					<button class="btn btn-xs btn-link remove-button" ng-click="remove(song)"><span class="glyphicon glyphicon-minus-sign"></span></button>
+				<div class="pull-right add-button">
+					<button ng-click="add(song)" class="btn btn-lg btn-link add-button"><span class="glyphicon glyphicon-plus-sign"></span></button>
 				</div>
 			</li>
 		</ul>
 	</div>
-	<ul class="list-group search-results">
-		<li class="list-group-item" ng-repeat="song in songs|notInList:playlist track by song.id">
+
+	<ul class="list-group">
+		<li class="list-group-item" ng-repeat="song in playlist track by song.id">
 			<div class="cover-art pull-left">
 				<play-button id="{{song.id}}"></play-button>
 				<img src="{{song.imageUrl}}" alt="..." class="img-rounded">
 			</div>
 			<span class="song-title">{{song.title}} <br> <small>{{song.artist}}</small></span>
-			<div class="pull-right right-button">
-				<button ng-click="add(song)" class="btn btn-xs btn-link add-button"><span class="glyphicon glyphicon-plus-sign"></span></button>
+			<div class="pull-right remove-button">
+				<button class="btn btn-lg btn-link remove-button" ng-click="remove(song)"><span class="glyphicon glyphicon-minus-sign"></span></button>
 			</div>
 		</li>
 	</ul>
