--- a/app/templates/modals/choosePhoto.html
+++ b/app/templates/modals/choosePhoto.html
@@ -11,7 +11,7 @@
 	</div>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="uploadPicture()">
+	<button class="btn btn-primary" ng-disabled="!selected" ng-click="uploadPicture()">
 		Choose Picture
 	</button>
 </div>
