Allow you to pick a title

--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -14,8 +14,8 @@
 			<button class="btn step-btn" ng-click="choosePhoto()">GO!</button>
 		</div>
 		<div class="default-template-step-2">
-			<span class="step-title" ng-click="chooseAlbumTitle()">Step 2.</span> Choose a title 
-			<button class="btn step-btn">GO!</button>
+			<span class="step-title">Step 2.</span> Choose a title
+			<button class="btn step-btn" ng-click="chooseAlbumTitle()">GO!</button>
 		</div>
 	</div>
 </div>
