you got greyscale now

--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -8,6 +8,7 @@
 		</ul>
 	</div>
 	<div class="default-template">
+		<img ng-src="{{imageUrl}}" ng-show="imageUrl" />
 
 		<div class="default-template-step-1">
 			<span class="step-title">Step 1.</span> Choose a background image 
