--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -7,12 +7,11 @@
 					<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
 					<input class="form-control input-sm" ng-model="query" ng-model-options="{ debounce: 250 }">
 					<span class="input-group-btn">
-						<button class="send-button btn btn-primary btn-sm pull-right" ng-if="playlist.length > 0" ng-click="savePlaylist(playlist)"><span class="glyphicon glyphicon-envelope"></span></button>
+						<button class="send-button btn btn-primary btn-sm pull-right" ng-disabled="playlist.length==0" ng-click="savePlaylist(playlist)"><span class="glyphicon glyphicon-envelope"></span></button>
 					</span>
 				</div>
 			</form>
 		</div>
-		<div class="empty-playlist" ng-if="playlist.length < 1">Start adding songs now!</div>
 		<ul class="list-group search-results">
 			<li class="list-group-item" ng-repeat="song in songs|notInList:playlist track by song.id">
 				<div class="cover-art pull-left">
@@ -25,6 +24,21 @@
 				</div>
 			</li>
 		</ul>
+	</div>
+
+	<div class="empty-playlist jumbotron" ng-if="!loading && playlist.length < 1">
+		<h1>Mix it up</h1>
+		<p>Start adding songs now!</p>
+	</div>
+
+	<div class="loading-playlist jumbotron" ng-if="loading">
+		<div class="spinner">
+			<div class="rect1"></div>
+			<div class="rect2"></div>
+			<div class="rect3"></div>
+			<div class="rect4"></div>
+			<div class="rect5"></div>
+		</div>
 	</div>
 
 	<ul class="list-group">
