--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -18,5 +18,6 @@
 			<span class="step-title">Step 2.</span> Choose a title
 			<button class="btn step-btn" ng-click="chooseAlbumTitle()">GO!</button>
 		</div>
+		<button class="btn step-btn" ng-click="saveCustomization()">Save!</button>
 	</div>
 </div>
