Add the title to the page

--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -8,6 +8,7 @@
 		</ul>
 	</div>
 	<div class="default-template">
+		<span ng-show="title.length > 0">{{title}}</span><br/>
 		<img ng-src="{{imageUrl}}" ng-show="imageUrl" />
 
 		<div class="default-template-step-1">
