Work on styles for create playlist page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -235,6 +235,13 @@ and (-webkit-min-device-pixel-ratio : 2) {
         width: 90%
     }
 
+    .song-title {
+        width: 250px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
 }
 
 /**
@@ -243,22 +250,17 @@ and (-webkit-min-device-pixel-ratio : 2) {
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 667px)
-and (width : 375px)
-and (height : 559px)
-and (orientation : portrait)
-and (color : 8)
-and (device-aspect-ratio : 375/667)
-and (aspect-ratio : 375/559)
-and (device-pixel-ratio : 2)
-and (-webkit-min-device-pixel-ratio : 2) {
-    .panel-heading .input-group {
-        width: 90%
+and (orientation : portrait) {
+    .container {
+        width: 667px;
     }
 
     .song-title {
-        font-size: 5pt;
+        width: 310px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
-
 }
 
 @media (max-width: 480px) {
