--- a/app/templates/playlists.html
+++ b/app/templates/playlists.html
@@ -7,7 +7,7 @@
             <h3 class="panel-title"><h1>{{albumTitle}}</h1></h3>
         </div>
         <div class="panel-body">
-            <img src="{{albumImageUrl}}" alt="..." style="width:100%">
+            <img src="{{albumImageUrl}}" alt="..." style="max-width:100%; max-height:400px; display:block; margin:auto;">
         </div>
     </div>
 
