--- a/app/templates/musicSearch.html
+++ b/app/templates/musicSearch.html
@@ -52,5 +52,6 @@
 				<button class="btn btn-lg btn-link remove-button" ng-click="remove(song)"><span class="glyphicon glyphicon-minus-sign"></span></button>
 			</div>
 		</li>
+		<a href="#!/customize" class="list-group-item customize-button">Customize</a>
 	</ul>
 </div>
