--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -17,10 +17,7 @@
 			<button class="btn step-btn" ng-click="chooseAlbumTitle()">GO!</button>
 		</div>
 		<div style="position:relative;">
-			<div width="400" height="400" 
-				 style="position:absolute; top:200px; left:200px; color:white; font-family:Verdana; text-align:center; vertical-align:middle;">
-				{{title}}
-			</div>
+			<div width="400" height="400" class="custom-album-title">{{title|spaceToBreaks}}</div>
 			<img width="754" height="754"
 				src="images/album_borders.svg" 
 				style="position:absolute; top:23px; left:23px; z-index:1;" 
