--- a/app/templates/customize.html
+++ b/app/templates/customize.html
@@ -1,6 +1,5 @@
 <div class="jumbotron">
 	<h1>Customize it, Baby!</h1>
-	<hr>
 	<div class="row">
 		<div class="col-md-9">
 			<div class="image-container" style="position:relative;">
@@ -42,10 +41,9 @@
 			<div class="send-container">
 				<h3 class="menu-title">Ship it</h3>
 				<p>
-					<button class="btn btn-lg btn-success send-button" ng-click="chooseAlbumTitle()"><span class="glyphicon glyphicon-send"></span>Send</button>
+					<button class="btn btn-lg btn-success send-button" ng-click="saveCustomization()"><span class="glyphicon glyphicon-send"></span>Send</button>
 				</p>
 			</div>
 
 	</div>
 </div>
-<button ng-show="imageUrl" class="btn step-btn" ng-click="saveCustomization()">Save!</button>
